// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders button href correctly 1`] = `
<a
  className="Button Button--primary"
  href="/about"
>
  About
</a>
`;

exports[`renders button type correctly 1`] = `
<a
  className="Button Button--primary"
>
  About
</a>
`;
